--- a/src/main/resources/conf/applicationConfig.properties
+++ b/src/main/resources/conf/applicationConfig.properties
@@ -27,6 +27,22 @@ db.maxActive=150
 db.maxIdle=2
 db.minIdle=5
 
+######################Gaia#######################
+dbGaia.driver=com.mysql.jdbc.Driver
+
+dbGaia.url=jdbc:mysql://localhost:3306/yisidesit?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&failOverReadOnly=false&zeroDateTimeBehavior=convertToNull
+dbGaia.username=root
+dbGaia.password=root
+
+#db.url=jdbc:mysql://47.93.86.199:3306/yiside?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&failOverReadOnly=false&zeroDateTimeBehavior=convertToNull
+#db.username=root
+#db.password=root
+
+dbGaia.maxActive=150
+dbGaia.maxIdle=2
+dbGaia.minIdle=5
+##################################################
+
 #hibernate config
 hibernate.dialect=org.hibernate.dialect.MySQLDialect
 hibernate.show_sql=false
