--- a/pom.xml
+++ b/pom.xml
@@ -109,10 +109,16 @@
 		</dependency>
 		
 		<!-- log4j -->
-		<dependency>
+		<!-- <dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
 			<version>1.2.17</version>
+		</dependency> -->
+		
+		<dependency>
+		    <groupId>org.slf4j</groupId>
+		    <artifactId>slf4j-log4j12</artifactId>
+		    <version>1.7.21</version>
 		</dependency>
 
 		<!-- mysql连接 -->
